<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Priori</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="new_title">Task Title</string>
    <string name="new_desc">Task Description</string>
    <string name="new_due_date">Due:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="priority_new">Importance</string>
    <string name="date_button">Due Date</string>
    <string name="time_button">Due Time</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="new_task_dialog">Create Task</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="sample_date">No Due Date</string>
    <string name="sample_time">No Due Time</string>
    <string name="new_task_requires">Tasks require a title</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="time_not_set">Date must also be set</string>
    <string name="date_in_past">Due date cannot be in the past</string>
    <string name="time_in_past">Time cannot be in the past</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_priority">Set Importance</string>
    <string name="add_category">New Category</string>
    <string name="create_category">Create New Category</string>
    <string name="task_icon_text">EX</string>
    <string name="action_delete">Delete</string>
    <string name="due">Due:</string>
    <string name="category">Categories</string>
    <string name="action_sort_due_priority">Priority</string>
    <string name="action_sort_newest">Newest</string>
    <string name="action_sort_oldest">Oldest</string>
    <string name="action_sort_due_first">Due First</string>
    <string name="action_sort_due_last">Due Last</string>
    <string name="action_sort_due_importance">Importance</string>
    <string name="action_sort">Sort</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="all_categories">Show All</string>
    <string name="all">All</string>

</resources>
