<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.priori.tkrywit.priori.MainActivity">
    <item android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_list_black_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/action_sort">
        <menu>
            <item
                android:id="@+id/menuSortPriority"
                android:title="@string/action_sort_due_priority" />
            <item
                android:id="@+id/menuSortImportance"
                android:title="@string/action_sort_due_importance" />
            <item
                android:id="@+id/menuSortDueFirst"
                android:title="@string/action_sort_due_first" />
            <item
                android:id="@+id/menuSortDueLast"
                android:title="@string/action_sort_due_last" />
            <item
                android:id="@+id/menuSortNewest"
                android:title="@string/action_sort_newest" />
            <item
                android:id="@+id/menuSortOldest"
                android:title="@string/action_sort_oldest" />
        </menu>
    </item>

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/action_delete"
        android:visible="false"/>
    <!-- Cancel, should appear as action button -->
    <item android:id="@+id/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:showAsAction="ifRoom"
        android:title="@string/action_cancel" />
    <!-- Done, should appear as action button -->
    <item android:id="@+id/action_accept"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="ifRoom"
        android:title="@string/action_accept"/>
</menu>
